--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <h1>Mine Sweeper</h1>
   <div class="start">
     <h4>choose your level:</h4>
-    <form>
+    <form class="form-levels">
       <input type="radio" onclick="getLevel(this)" name="level" id="1" value="begginer"> begginer<br>
-      <input type="radio" onclick="getLevel(this)" name="level" id="2" value="medium" checked> medium<br>
-      <input type="radio" onclick="getLevel(this)" name="level" id="3" value="expert"> expert<br> 
+      <input type="radio" onclick="getLevel(this)" name="level" id="2" value="medium"> medium<br>
+      <input type="radio" onclick="getLevel(this)" name="level" id="3" value="expert" checked> expert<br> 
       <button type="button" class="button" onclick="startPlay()">start play</button>
     </form>
   </div>
